# realtimeapi_test

./: README.md
front/: package-lock.json  package.json
front/src/: main.tsx
front/src/components/: App.tsx  Button.tsx  EventLog.tsx  SessionControls.tsx
server/: .env.sample  README.md  pyproject.toml
server/src/: main.py
